[package]
name = "midiplex"
version = "0.6.2"
authors = ["Jack Wrenn <me@jswrenn.com>"]
description = "Volume-aware splitting of a polyphonic MIDI stream into multiple, monophonic streams."
license = "MIT"
repository = "https://github.com/jswrenn/midiplex"

[dependencies]
alsa = "0.2"
clap = "2.20"
structopt = "0.2"
indexmap = "1.0"
nix = "0.9"
